<resources>
    <string name="app_name">App Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_ultimas_ocorrencias">Últimas</string>
    <string name="button_incluir_ocorrencia">Incluir</string>
    <string name="button_salvar_ocorrencia">Salvar</string>
    <string name="titulo_ocorrencia">Título</string>
    <string name="descricao_ocorrencia">Descrição</string>
    <string name="categoria_ocorrencia">Categoria</string>
    <string name="data_ocorrencia">Data do Cadastro</string>
    <string name="coordenadas_ocorrencia">Coordenadas</string>
    <string name="latitude_ocorrencia">Latitude</string>
    <string name="longitude_ocorrencia">Longitude</string>
    <string name="usuario_ocorrencia">Usuário</string>
    <string name="usuario_ocorrencia_opcional">Seu Email (opcional)</string>
    <string name="spinner_categoria_ocorrencia">Selecione uma Categoria:</string>
    <string name="incluir_ocorrencia_msg_sucesso">Ocorrência cadastrada com sucesso. Obrigado!</string>
    <string name="dialog_ok">OK</string>
    <string name="titulo_filtro">Filtrar Ocorrências</string>
    <string name="chave_google">AIzaSyAgo01ktWrHb1NHLKujw4pw26TfPVH2H5U</string>
    <string name="ocorrencia_incluida">Ocorrência cadastrada com sucesso!</string>

    <string-array name="opcoes_categoria_ocorrencia">
        <item>Selecione</item>
        <item>Iluminação Pública</item>
        <item>Saneamento Básico</item>
        <item>Limpeza Urbana</item>
        <item>Pavimentação Asfáltica</item>
        <item>Carro abandonado</item>
    </string-array>
    <string name="title_activity_marca_mapa">Map</string>
    <string name="title_activity_adasdasdas">Map</string>
</resources>
